--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
-.div_block_right{ 
-    float: right; 
+.div_block_right {
+    float: right;
     clear: both;
     margin: 10px;
-    top: 100px; 
+    top: 100px;
     z-index: 1000;
 }
 
-#search.div_block_right{
+#search.div_block_right {
     size: 200px;
     float: right;
 }
@@ -14,7 +14,7 @@
 .carousel-inner img {
     width: 1100px;
     height: 500px;
-  }
+}
 
 .form {
     float: right;
@@ -37,8 +37,8 @@
     z-index: 9999;
     height: 220px;
     width: 400px;
-    clear:both;
-    float:left;    
+    clear: both;
+    float: left;
     background-color: black;
     opacity: 0.7;
     color: white
@@ -63,4 +63,41 @@ li .indent {
 
 a:hover {
     background-color: hotpink;
-  }
+}
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+.active,
+.accordion:hover {
+    background-color: #ccc;
+}
+
+.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+}
+
+#mapInput {
+    width: auto;
+    height: 450px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    margin: auto;
+    border: 10px solid;
+    border-color: rgb(0, 0, 0);
+}
