--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,10 @@ a:hover {
     background-color: #ccc;
 }
 
+.accordionUpdate {
+    background-color: #28a745;
+}
+
 .panel {
     padding: 0 18px;
     display: none;
