--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,9 @@
 }
 
 .title {
-    margin: 20px;
+    padding: 15px;
+    background-color: #28a745;
+    width: 100%;
 }
 
 #homeTitle {
@@ -40,22 +42,27 @@
 }
 
 .container {
-    padding: 40px;
+    padding: 30px;
     border: 2px;
 }
 
-#login.container {
-    top: 56px;
-    left: 50%;
+.formContainer {
+    padding: 15px;
+}
+
+#login.formContainer {
+    top: 76px;
+    left: 450px;
     position: absolute;
     z-index: 9999;
-    height: 220px;
+    height: fit-content;
     width: 400px;
     clear: both;
     float: left;
-    background-color: black;
-    opacity: 0.7;
-    color: white
+    background-color: rgb(61, 61, 61);
+    opacity: 0.8;
+    color: white;
+    border-radius: 7px;
 }
 
 .btn-primary {
@@ -77,7 +84,8 @@ li .indent {
 
 /* accordion hover colour */
 a:hover {
-    background-color: rgb(94, 94, 94);
+    background-color: #1d2630;
+    border-radius: 5px;
 }
 
 /* accordian style */
@@ -118,7 +126,7 @@ a:hover {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     margin: auto;
-    border: 3px solid;
+    border: 2px solid;
     border-color: rgb(0, 0, 0);
 }
 
@@ -145,4 +153,35 @@ a:hover {
 
 .indent {
     margin-left: 40px;
+    padding: 20px;
+}
+
+.indentItems {
+    margin-left: 40px;
+    padding: 20px;
+    float: left;
+}
+
+.display {
+    /* display: inline-block; */
+    float: left;
+}
+
+.btn-primary {
+    float: left;
+    margin: 15px;
+}
+
+.form-control.text {
+    margin-bottom: 3px;
+    width: 250px;
+}
+
+.browser-default.custom-select {
+    width: 300px;
+}
+
+#divCatList.container {
+    margin: 25px;
+    /* float: left; */
 }
