--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ a:hover.dropdown-item {
     border: 3px solid;
     margin-top: 10px;
     margin-left: -2px;
-    margin-bottom: 30px;
+    margin-bottom: -2px;
     padding: 10px;
 }
 
@@ -197,3 +197,6 @@ a:hover.dropdown-item {
     padding: 4px;
 }
 
+#divCompare,#divCompareList {
+    display: inline-block
+}
