--- a/css/styles.css
+++ b/css/styles.css
@@ -198,3 +198,8 @@ a:hover.dropdown-item {
 #divCompare,#divCompareList {
     display: inline-block
 }
+
+#watchItem {
+    float: left;
+    padding: 20px;
+}
