--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,13 @@
 }
 
 .carousel-inner img {
-    width: 1100px;
+    width: 500px;
+    height: 500px;
+}
+
+#Carousel {
+    margin: auto;
+    width: 500px;
     height: 500px;
 }
 
